# wavelets

./: .gitignore  README.md  changelog.md  haar_separate.tst  wavelets.cabal
src/: Main.hs
src/Data/: Wavelets.hs
src/Data/Wavelets/: Construction.hs  Internal.hs  Reconstruction.hs  Scaling.hs
test/Data/: WaveletsSpec.hs  haar_separate.tst
test/Data/Wavelets/: ReconstructionSpec.hs  ScalingSpec.hs
