Name:                   wavelets
Version:                0.1.2
Author:                 Scott Murphy<scottmurphy09@gmail.com>
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:            NOT THE ORIGINAL AUTHOR!  See Below
-- Description:         http://www.volkerschatz.com/haskell/haswavelet.html   
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  extra-libraries:      gsl lapack gslcblas
  GHC-Options:          -Wall
  Exposed-Modules:      Data.Wavelets.Construction
                        Data.Wavelets.Reconstruction
                        Data.Wavelets.Scaling                                
  Other-Modules:        Data.Wavelets.Internal
                        Data.Wavelets
  Build-Depends:        base                     >= 4         &&   < 5
                       ,bytestring               >= 0.9       &&   < 1.0
                       ,mtl                      >= 2.1       &&   < 2.2
                       ,lens                     >= 3.9      
                       ,text                     >= 0.11.3.1 
                       ,transformers             >= 0.3.0.0
                       ,vector                   >= 0.10.9.1
                       ,unordered-containers     >= 0.2.3.3
                       ,hmatrix == 0.15.2.0
                       ,hstatistics  == 0.2.5.1                     
                       ,statistics == 0.11.0.0
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec 
                      , wavelets
                      , vector
                      , hmatrix
                      , hstatistics
                      , statistics

Executable wavelets
    main-is:            Main.hs
    HS-Source-Dirs:     src
    extra-libraries:    gsl lapack gslcblas
    build-depends:      base
                      , wavelets
                                          
    ghc-options:      -threaded -O2 -rtsopts 

Source-Repository head
  Type:                 git
--  Location:             
